添加销售线索、新建编辑线索、线索详情

--- a/data/styles.css
+++ b/data/styles.css
@@ -63,7 +63,19 @@
 }
 .line {
 }
+.text_field {
+  color:#000000;
+  text-align:left;
+}
+.droplist {
+  color:#000000;
+  text-align:left;
+}
 .menu_item {
 }
 .icon {
+}
+.text_area {
+  color:#000000;
+  text-align:left;
 }
