线索部分各尺寸适配

--- a/files/销售线索/styles.css
+++ b/files/销售线索/styles.css
@@ -1959,25 +1959,335 @@
   width:62px;
   word-wrap:break-word;
 }
+#u554 {
+  position:absolute;
+  left:537px;
+  top:120px;
+  width:320px;
+  height:35px;
+}
+#u554_menu {
+  position:absolute;
+  left:-3px;
+  top:-3px;
+  width:326px;
+  height:41px;
+  -webkit-transform:rotate(NaNdeg);
+  -moz-transform:rotate(NaNdeg);
+  -ms-transform:rotate(NaNdeg);
+  transform:rotate(NaNdeg);
+}
+#u555 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:325px;
+  height:40px;
+}
+#u556_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:35px;
+}
+#u556 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:35px;
+  font-family:'Arial Negreta', 'Arial Normal', 'Arial';
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+  text-align:left;
+}
+#u557 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:316px;
+  word-wrap:break-word;
+}
+#u558 {
+  position:absolute;
+  left:0px;
+  top:35px;
+  width:320px;
+  height:105px;
+  visibility:hidden;
+}
+#u558_menu {
+  position:absolute;
+  left:-3px;
+  top:-3px;
+  width:326px;
+  height:111px;
+  -webkit-transform:rotate(NaNdeg);
+  -moz-transform:rotate(NaNdeg);
+  -ms-transform:rotate(NaNdeg);
+  transform:rotate(NaNdeg);
+}
+#u559 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:325px;
+  height:110px;
+}
+#u560_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:35px;
+}
+#u560 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:35px;
+  font-family:'Arial Negreta', 'Arial Normal', 'Arial';
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+  text-align:left;
+}
+#u561 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:316px;
+  word-wrap:break-word;
+}
+#u562_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:35px;
+}
+#u562 {
+  position:absolute;
+  left:0px;
+  top:35px;
+  width:320px;
+  height:35px;
+  font-family:'Arial Negreta', 'Arial Normal', 'Arial';
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+  text-align:left;
+}
+#u563 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:316px;
+  word-wrap:break-word;
+}
+#u564_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:35px;
+}
+#u564 {
+  position:absolute;
+  left:0px;
+  top:70px;
+  width:320px;
+  height:35px;
+  font-family:'Arial Negreta', 'Arial Normal', 'Arial';
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+  text-align:left;
+}
+#u565 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:316px;
+  word-wrap:break-word;
+}
+#u566 {
+  position:absolute;
+  left:568px;
+  top:139px;
+  width:414px;
+  height:35px;
+}
+#u566_menu {
+  position:absolute;
+  left:-3px;
+  top:-3px;
+  width:420px;
+  height:41px;
+  -webkit-transform:rotate(NaNdeg);
+  -moz-transform:rotate(NaNdeg);
+  -ms-transform:rotate(NaNdeg);
+  transform:rotate(NaNdeg);
+}
+#u567 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:419px;
+  height:40px;
+}
+#u568_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:414px;
+  height:35px;
+}
+#u568 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:414px;
+  height:35px;
+  font-family:'Arial Negreta', 'Arial Normal', 'Arial';
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+  text-align:left;
+}
+#u569 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:410px;
+  word-wrap:break-word;
+}
+#u570 {
+  position:absolute;
+  left:0px;
+  top:35px;
+  width:414px;
+  height:105px;
+  visibility:hidden;
+}
+#u570_menu {
+  position:absolute;
+  left:-3px;
+  top:-3px;
+  width:420px;
+  height:111px;
+  -webkit-transform:rotate(NaNdeg);
+  -moz-transform:rotate(NaNdeg);
+  -ms-transform:rotate(NaNdeg);
+  transform:rotate(NaNdeg);
+}
+#u571 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:419px;
+  height:110px;
+}
+#u572_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:414px;
+  height:35px;
+}
+#u572 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:414px;
+  height:35px;
+  font-family:'Arial Negreta', 'Arial Normal', 'Arial';
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+  text-align:left;
+}
+#u573 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:410px;
+  word-wrap:break-word;
+}
+#u574_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:414px;
+  height:35px;
+}
+#u574 {
+  position:absolute;
+  left:0px;
+  top:35px;
+  width:414px;
+  height:35px;
+  font-family:'Arial Negreta', 'Arial Normal', 'Arial';
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+  text-align:left;
+}
+#u575 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:410px;
+  word-wrap:break-word;
+}
+#u576_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:414px;
+  height:35px;
+}
+#u576 {
+  position:absolute;
+  left:0px;
+  top:70px;
+  width:414px;
+  height:35px;
+  font-family:'Arial Negreta', 'Arial Normal', 'Arial';
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+  text-align:left;
+}
+#u577 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:410px;
+  word-wrap:break-word;
+}
 body.a {  background-color:rgba(255, 255, 255, 1);
   background-image:none;
   position:static;
   left:auto;
-  width:330.449747468306px;
+  width:322px;
   margin-left:0;
   margin-right:0;
   text-align:left;
 }
 #u418.a {
   width:322px;
-  height:874px;
+  height:987px;
 }
 #u418_div.a {
   position:absolute;
   left:0px;
   top:0px;
   width:322px;
-  height:874px;
+  height:987px;
   background:inherit;
   background-color:rgba(242, 242, 242, 1);
   box-sizing:border-box;
@@ -1990,7 +2300,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u419.a {
-  top:429px;
+  top:486px;
   width:318px;
 }
 #u420.a {
@@ -2200,6 +2510,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u456.a {
 }
 #u457.a {
+  left:191px;
 }
 #u457_div.a {
   position:absolute;
@@ -2240,6 +2551,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u460.a {
 }
 #u461.a {
+  left:235px;
 }
 #u461_div.a {
   position:absolute;
@@ -2363,6 +2675,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u473.a {
 }
 #u474.a {
+  left:190px;
 }
 #u474_div.a {
   position:absolute;
@@ -2403,6 +2716,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u477.a {
 }
 #u478.a {
+  left:234px;
 }
 #u478_div.a {
   position:absolute;
@@ -2526,6 +2840,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u490.a {
 }
 #u491.a {
+  left:192px;
 }
 #u491_div.a {
   position:absolute;
@@ -2566,6 +2881,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u494.a {
 }
 #u495.a {
+  left:236px;
 }
 #u495_div.a {
   position:absolute;
@@ -2689,6 +3005,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u507.a {
 }
 #u508.a {
+  left:192px;
 }
 #u508_div.a {
   position:absolute;
@@ -2729,6 +3046,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u511.a {
 }
 #u512.a {
+  left:236px;
 }
 #u512_div.a {
   position:absolute;
@@ -2751,6 +3069,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u513.a {
 }
 #u515.a {
+  top:820px;
   width:300px;
   height:170px;
 }
@@ -2776,6 +3095,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   width:296px;
 }
 #u517.a {
+  top:833px;
 }
 #u517_div.a {
   position:absolute;
@@ -2798,6 +3118,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u518.a {
 }
 #u519.a {
+  top:862px;
 }
 #u519_div.a {
   position:absolute;
@@ -2816,6 +3137,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u520.a {
 }
 #u521.a {
+  top:888px;
 }
 #u521_div.a {
   position:absolute;
@@ -2834,6 +3156,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u522.a {
 }
 #u523.a {
+  top:914px;
 }
 #u523_div.a {
   position:absolute;
@@ -2852,6 +3175,8 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u524.a {
 }
 #u525.a {
+  left:190px;
+  top:836px;
 }
 #u525_div.a {
   position:absolute;
@@ -2874,6 +3199,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u526.a {
 }
 #u527.a {
+  top:940px;
 }
 #u527_div.a {
   position:absolute;
@@ -2892,6 +3218,8 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u528.a {
 }
 #u529.a {
+  left:234px;
+  top:968px;
 }
 #u529_div.a {
   position:absolute;
@@ -2914,8 +3242,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u530.a {
 }
 #u531.a {
-  left:10px;
-  top:890px;
+  top:1010px;
   width:300px;
   height:39px;
 }
@@ -2945,12 +3272,14 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   top:215px;
 }
 #u546.a {
+  left:273px;
 }
 #u546_img.a {
 }
 #u547.a {
 }
 #u548.a {
+  left:269px;
 }
 #u548_img.a {
 }
@@ -2958,16 +3287,16 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 }
 #u551.a {
   position:absolute;
-  left:77px;
+  left:60px;
   top:7px;
-  width:216px;
+  width:168px;
   height:25px;
 }
 #u551_input.a {
   position:absolute;
   left:0px;
   top:0px;
-  width:216px;
+  width:168px;
   height:25px;
   font-family:'Arial Normal', 'Arial';
   font-weight:400;
@@ -2980,6 +3309,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   outline-style:none;
 }
 #u552.a {
+  left:191px;
 }
 #u552_div.a {
   position:absolute;
@@ -3001,6 +3331,12 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 }
 #u553.a {
 }
+#u554.a {
+  left:0px;
+  top:40px;
+}
+#u566.a {
+}
 body.b {  background-color:rgba(255, 255, 255, 1);
   background-image:none;
   position:static;
@@ -3012,14 +3348,14 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 }
 #u418.b {
   width:414px;
-  height:852px;
+  height:986px;
 }
 #u418_div.b {
   position:absolute;
   left:0px;
   top:0px;
   width:414px;
-  height:852px;
+  height:986px;
   background:inherit;
   background-color:rgba(242, 242, 242, 1);
   box-sizing:border-box;
@@ -3032,7 +3368,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u419.b {
-  top:418px;
+  top:485px;
   width:410px;
 }
 #u420.b {
@@ -3138,14 +3474,13 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 }
 #u447.b {
   width:394px;
-  height:120px;
 }
 #u447_div.b {
   position:absolute;
   left:0px;
   top:0px;
   width:394px;
-  height:120px;
+  height:174px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -3158,10 +3493,10 @@ body.b {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u448.b {
-  top:52px;
   width:390px;
 }
 #u449.b {
+  left:50px;
 }
 #u449_div.b {
   position:absolute;
@@ -3184,6 +3519,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u450.b {
 }
 #u451.b {
+  left:50px;
 }
 #u451_div.b {
   position:absolute;
@@ -3202,6 +3538,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u452.b {
 }
 #u453.b {
+  left:50px;
 }
 #u453_div.b {
   position:absolute;
@@ -3220,6 +3557,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u454.b {
 }
 #u455.b {
+  left:50px;
 }
 #u455_div.b {
   position:absolute;
@@ -3238,6 +3576,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u456.b {
 }
 #u457.b {
+  left:260px;
 }
 #u457_div.b {
   position:absolute;
@@ -3260,6 +3599,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u458.b {
 }
 #u459.b {
+  left:50px;
 }
 #u459_div.b {
   position:absolute;
@@ -3278,6 +3618,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u460.b {
 }
 #u461.b {
+  left:304px;
 }
 #u461_div.b {
   position:absolute;
@@ -3301,14 +3642,13 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 }
 #u464.b {
   width:394px;
-  height:120px;
 }
 #u464_div.b {
   position:absolute;
   left:0px;
   top:0px;
   width:394px;
-  height:120px;
+  height:174px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -3321,10 +3661,10 @@ body.b {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u465.b {
-  top:52px;
   width:390px;
 }
 #u466.b {
+  left:50px;
 }
 #u466_div.b {
   position:absolute;
@@ -3347,6 +3687,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u467.b {
 }
 #u468.b {
+  left:50px;
 }
 #u468_div.b {
   position:absolute;
@@ -3365,6 +3706,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u469.b {
 }
 #u470.b {
+  left:50px;
 }
 #u470_div.b {
   position:absolute;
@@ -3383,6 +3725,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u471.b {
 }
 #u472.b {
+  left:50px;
 }
 #u472_div.b {
   position:absolute;
@@ -3401,6 +3744,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u473.b {
 }
 #u474.b {
+  left:260px;
 }
 #u474_div.b {
   position:absolute;
@@ -3423,6 +3767,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u475.b {
 }
 #u476.b {
+  left:50px;
 }
 #u476_div.b {
   position:absolute;
@@ -3441,6 +3786,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u477.b {
 }
 #u478.b {
+  left:304px;
 }
 #u478_div.b {
   position:absolute;
@@ -3464,14 +3810,13 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 }
 #u481.b {
   width:394px;
-  height:120px;
 }
 #u481_div.b {
   position:absolute;
   left:0px;
   top:0px;
   width:394px;
-  height:120px;
+  height:174px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -3484,10 +3829,10 @@ body.b {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u482.b {
-  top:52px;
   width:390px;
 }
 #u483.b {
+  left:50px;
 }
 #u483_div.b {
   position:absolute;
@@ -3510,6 +3855,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u484.b {
 }
 #u485.b {
+  left:50px;
 }
 #u485_div.b {
   position:absolute;
@@ -3528,6 +3874,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u486.b {
 }
 #u487.b {
+  left:50px;
 }
 #u487_div.b {
   position:absolute;
@@ -3546,6 +3893,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u488.b {
 }
 #u489.b {
+  left:50px;
 }
 #u489_div.b {
   position:absolute;
@@ -3564,6 +3912,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u490.b {
 }
 #u491.b {
+  left:260px;
 }
 #u491_div.b {
   position:absolute;
@@ -3586,6 +3935,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u492.b {
 }
 #u493.b {
+  left:50px;
 }
 #u493_div.b {
   position:absolute;
@@ -3604,6 +3954,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u494.b {
 }
 #u495.b {
+  left:304px;
 }
 #u495_div.b {
   position:absolute;
@@ -3627,14 +3978,13 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 }
 #u498.b {
   width:394px;
-  height:120px;
 }
 #u498_div.b {
   position:absolute;
   left:0px;
   top:0px;
   width:394px;
-  height:120px;
+  height:174px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -3647,10 +3997,10 @@ body.b {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u499.b {
-  top:52px;
   width:390px;
 }
 #u500.b {
+  left:50px;
 }
 #u500_div.b {
   position:absolute;
@@ -3673,6 +4023,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u501.b {
 }
 #u502.b {
+  left:50px;
 }
 #u502_div.b {
   position:absolute;
@@ -3691,6 +4042,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u503.b {
 }
 #u504.b {
+  left:50px;
 }
 #u504_div.b {
   position:absolute;
@@ -3709,6 +4061,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u505.b {
 }
 #u506.b {
+  left:50px;
 }
 #u506_div.b {
   position:absolute;
@@ -3727,6 +4080,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u507.b {
 }
 #u508.b {
+  left:260px;
 }
 #u508_div.b {
   position:absolute;
@@ -3749,6 +4103,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u509.b {
 }
 #u510.b {
+  left:50px;
 }
 #u510_div.b {
   position:absolute;
@@ -3767,6 +4122,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u511.b {
 }
 #u512.b {
+  left:304px;
 }
 #u512_div.b {
   position:absolute;
@@ -3790,14 +4146,13 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 }
 #u515.b {
   width:394px;
-  height:120px;
 }
 #u515_div.b {
   position:absolute;
   left:0px;
   top:0px;
   width:394px;
-  height:120px;
+  height:174px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -3810,10 +4165,10 @@ body.b {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u516.b {
-  top:52px;
   width:390px;
 }
 #u517.b {
+  left:50px;
 }
 #u517_div.b {
   position:absolute;
@@ -3836,6 +4191,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u518.b {
 }
 #u519.b {
+  left:50px;
 }
 #u519_div.b {
   position:absolute;
@@ -3854,6 +4210,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u520.b {
 }
 #u521.b {
+  left:50px;
 }
 #u521_div.b {
   position:absolute;
@@ -3872,6 +4229,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u522.b {
 }
 #u523.b {
+  left:50px;
 }
 #u523_div.b {
   position:absolute;
@@ -3890,6 +4248,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u524.b {
 }
 #u525.b {
+  left:260px;
 }
 #u525_div.b {
   position:absolute;
@@ -3912,6 +4271,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u526.b {
 }
 #u527.b {
+  left:50px;
 }
 #u527_div.b {
   position:absolute;
@@ -3930,6 +4290,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u528.b {
 }
 #u529.b {
+  left:304px;
 }
 #u529_div.b {
   position:absolute;
@@ -4032,4 +4393,10 @@ body.b {  background-color:rgba(255, 255, 255, 1);
   color:#FFFFFF;
 }
 #u553.b {
+}
+#u554.b {
+}
+#u566.b {
+  left:0px;
+  top:40px;
 }
