新建线索对话框调整适配

--- a/files/新建_编辑线索/styles.css
+++ b/files/新建_编辑线索/styles.css
@@ -661,7 +661,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   background-image:none;
   position:static;
   left:auto;
-  width:339px;
+  width:322px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -741,6 +741,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u585.a {
 }
 #u586.a {
+  left:13px;
 }
 #u586_img.a {
 }
@@ -748,14 +749,14 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 }
 #u588.a {
   width:322px;
-  height:874px;
+  height:509px;
 }
 #u588_div.a {
   position:absolute;
   left:0px;
   top:0px;
   width:322px;
-  height:874px;
+  height:509px;
   background:inherit;
   background-color:rgba(242, 242, 242, 1);
   box-sizing:border-box;
@@ -768,10 +769,11 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u589.a {
-  top:429px;
+  top:246px;
   width:318px;
 }
 #u590.a {
+  top:56px;
 }
 #u590_div.a {
   position:absolute;
@@ -793,15 +795,15 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u592.a {
   position:absolute;
   left:121px;
-  top:87px;
-  width:218px;
+  top:53px;
+  width:176px;
   height:25px;
 }
 #u592_input.a {
   position:absolute;
   left:0px;
   top:0px;
-  width:218px;
+  width:176px;
   height:25px;
   font-family:'Arial Normal', 'Arial';
   font-weight:400;
@@ -812,6 +814,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   text-align:left;
 }
 #u593.a {
+  top:96px;
 }
 #u593_div.a {
   position:absolute;
@@ -833,15 +836,15 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u595.a {
   position:absolute;
   left:122px;
-  top:128px;
-  width:217px;
+  top:94px;
+  width:175px;
   height:25px;
 }
 #u595_input.a {
   position:absolute;
   left:0px;
   top:0px;
-  width:217px;
+  width:175px;
   height:25px;
   font-family:'Arial Normal', 'Arial';
   font-weight:400;
@@ -852,6 +855,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   text-align:left;
 }
 #u596.a {
+  top:136px;
 }
 #u596_div.a {
   position:absolute;
@@ -871,6 +875,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u597.a {
 }
 #u598.a {
+  top:176px;
 }
 #u598_div.a {
   position:absolute;
@@ -892,15 +897,15 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u600.a {
   position:absolute;
   left:122px;
-  top:208px;
-  width:217px;
+  top:174px;
+  width:175px;
   height:25px;
 }
 #u600_input.a {
   position:absolute;
   left:0px;
   top:0px;
-  width:217px;
+  width:175px;
   height:25px;
   font-family:'Arial Normal', 'Arial';
   font-weight:400;
@@ -911,6 +916,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   text-align:left;
 }
 #u601.a {
+  top:216px;
 }
 #u601_div.a {
   position:absolute;
@@ -932,15 +938,15 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u603.a {
   position:absolute;
   left:122px;
-  top:248px;
-  width:217px;
+  top:214px;
+  width:175px;
   height:25px;
 }
 #u603_input.a {
   position:absolute;
   left:0px;
   top:0px;
-  width:217px;
+  width:175px;
   height:25px;
   font-family:'Arial Normal', 'Arial';
   font-weight:400;
@@ -951,6 +957,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   text-align:left;
 }
 #u604.a {
+  top:256px;
 }
 #u604_div.a {
   position:absolute;
@@ -972,15 +979,15 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u606.a {
   position:absolute;
   left:122px;
-  top:288px;
-  width:217px;
+  top:254px;
+  width:175px;
   height:25px;
 }
 #u606_input.a {
   position:absolute;
   left:0px;
   top:0px;
-  width:217px;
+  width:175px;
   height:25px;
   font-family:'Arial Normal', 'Arial';
   font-weight:400;
@@ -991,6 +998,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   text-align:left;
 }
 #u607.a {
+  top:341px;
 }
 #u607_div.a {
   position:absolute;
@@ -1010,6 +1018,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u608.a {
 }
 #u609.a {
+  top:298px;
 }
 #u609_div.a {
   position:absolute;
@@ -1031,15 +1040,15 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u611.a {
   position:absolute;
   left:121px;
-  top:166px;
-  width:218px;
+  top:132px;
+  width:176px;
   height:25px;
 }
 #u611_input.a {
   position:absolute;
   left:0px;
   top:0px;
-  width:218px;
+  width:176px;
   height:25px;
   font-family:'Arial Normal', 'Arial';
   font-weight:400;
@@ -1052,15 +1061,15 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u612.a {
   position:absolute;
   left:122px;
-  top:328px;
-  width:217px;
+  top:294px;
+  width:175px;
   height:25px;
 }
 #u612_input.a {
   position:absolute;
   left:0px;
   top:0px;
-  width:217px;
+  width:175px;
   height:25px;
   font-family:'Arial Normal', 'Arial';
   font-weight:400;
@@ -1073,15 +1082,15 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u613.a {
   position:absolute;
   left:121px;
-  top:375px;
-  width:218px;
+  top:341px;
+  width:176px;
   height:109px;
 }
 #u613_input.a {
   position:absolute;
   left:0px;
   top:0px;
-  width:218px;
+  width:176px;
   height:109px;
   font-family:'Arial Normal', 'Arial';
   font-weight:400;
@@ -1092,6 +1101,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   text-align:left;
 }
 #u614.a {
+  top:490px;
 }
 #u614_div.a {
   position:absolute;
@@ -1113,6 +1123,8 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u615.a {
 }
 #u616.a {
+  left:176px;
+  top:490px;
 }
 #u616_div.a {
   position:absolute;
@@ -1221,14 +1233,14 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 }
 #u588.b {
   width:414px;
-  height:852px;
+  height:677px;
 }
 #u588_div.b {
   position:absolute;
   left:0px;
   top:0px;
   width:414px;
-  height:852px;
+  height:677px;
   background:inherit;
   background-color:rgba(242, 242, 242, 1);
   box-sizing:border-box;
@@ -1241,7 +1253,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u589.b {
-  top:418px;
+  top:330px;
   width:410px;
 }
 #u590.b {
